--- a/SwordAndFather/appsettings.json
+++ b/SwordAndFather/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=localhost;Database=SwordAndFather;Trusted_Connection=True;" 
 }
